--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Kotlin MVVM Demo(retrofit-nopaging)</string>
+    <string name="app_name">贝壳天气</string>
 </resources>
