--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">贝壳天气</string>
+    <string name="need_open_location_switch">本应用需要获取地理位置，请打开获取位置的开关</string>
 </resources>
